--- a/UDTAndroid/AndroidManifest.xml
+++ b/UDTAndroid/AndroidManifest.xml
@@ -7,9 +7,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    
     <application
-        android:debuggable="false"
+        android:debuggable="true"
         android:icon="@drawable/udticon"
         android:label="@string/app_name" android:name="AppDataLocalization">
         <uses-library android:name="com.google.android.maps" />
