--- a/UDTAndroid/AndroidManifest.xml
+++ b/UDTAndroid/AndroidManifest.xml
@@ -36,6 +36,7 @@
         </activity>
         <activity android:name="TrackFamilyActivity" android:screenOrientation="portrait"></activity>
         <activity android:screenOrientation="portrait" android:name="TrackTicketActivity"></activity>
+        <activity android:name="ConfigurationActivity" android:screenOrientation="portrait"></activity>
     </application>
 
     <uses-sdk android:minSdkVersion="4" />
