--- a/UDTAndroid/AndroidManifest.xml
+++ b/UDTAndroid/AndroidManifest.xml
@@ -35,7 +35,7 @@
         <activity android:name="DondeEstoyActivity" android:screenOrientation="portrait">
         </activity>
         <activity android:name="TrackFamilyActivity" android:screenOrientation="portrait"></activity>
-        <activity android:screenOrientation="portrait" android:name="TrackTicketActivity"></activity>
+        <activity android:screenOrientation="portrait" android:name="TrackTicketActivity" android:windowSoftInputMode="stateHidden"></activity>
         <activity android:name="ConfigurationActivity" android:screenOrientation="portrait"></activity>
     </application>
 
